Agregar ejemplos de directivas

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <title>Curso Profesional Vue.js</title>
 </head>
 <body>
-<ul>
-    <li>
-        <a href="/examples/1-interpolation.html">Interpolación</a>
-    </li>
-</ul>
+    <ul>
+        <li>
+            <a href="/examples/1-interpolation.html">Interpolación</a>
+
+        </li>
+        <li>
+            <a href="/examples/2-directives.html">Directivas</a>
+        </li>
+    </ul>
 </body>
 </html>
