--- a/index.html
+++ b/index.html
@@ -3,16 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Curso Profesional Vue.js</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-    <ul>
-        <li>
-            <a href="/examples/1-interpolation.html">Interpolación</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h1>Curso Profesional Vue.js</h1>
+                <div class="alert alert-info">
+                    <ul>
+                        <li>
+                            <a href="/examples/1-interpolation.html">Interpolación</a>
 
-        </li>
-        <li>
-            <a href="/examples/2-directives.html">Directivas</a>
-        </li>
-    </ul>
+                        </li>
+                        <li>
+                            <a href="/examples/2-directives.html">Directivas</a>
+                        </li>
+                        <li>
+                            <a href="/examples/3-computed-properties.html">Computed Properties</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
