--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                         <li>
                             <a href="/examples/3-computed-properties.html">Computed Properties</a>
                         </li>
+                        <li>
+                            <a href="/examples/4-events.html">Manejo de Eventos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
