Agregar ejemplo con forms

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                         <li>
                             <a href="/examples/4-events.html">Manejo de Eventos</a>
                         </li>
+                        <li>
+                            <a href="/examples/5-forms.html">Forms</a>
+                        </li>
                     </ul>
                 </div>
             </div>
