Agregar ejemplo de componentes y eventos ($emit)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
                     <ul>
                         <li>
                             <a href="/examples/1-interpolation.html">Interpolación</a>
-
                         </li>
                         <li>
                             <a href="/examples/2-directives.html">Directivas</a>
@@ -29,6 +28,12 @@
                         </li>
                         <li>
                             <a href="/examples/5-forms.html">Forms</a>
+                        </li>
+                        <li>
+                            <a href="/examples/6-components.html">Componentes</a>
+                        </li>
+                        <li>
+                            <a href="/examples/7-components-and-events.html">Componentes y Eventos</a>
                         </li>
                     </ul>
                 </div>
