--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <li>
                             <a href="/examples/7-components-and-events.html">Componentes y Eventos</a>
                         </li>
+                        <li>
+                            <a href="/examples/7-components-and-events.html">Filtros</a>
+                        </li>
                     </ul>
                 </div>
             </div>
