--- a/examples/7-components-and-events.html
+++ b/examples/7-components-and-events.html
@@ -37,8 +37,8 @@
     <div id="app">
         <div class="container">
             <div class="row">
-                <h1>Componentes</h1>
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-6">
+                    <h1>Componentes y Eventos con $emit</h1>
                     <div class="b-tasks-container">
                         <h2>Mis tareas</h2>
                         <task-component :tasks-in-child-component="tasks"
