--- a/country-vue/index.html
+++ b/country-vue/index.html
@@ -6,6 +6,7 @@
   <title>Country Vue | Statistics about countries</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/static/flags/flags.css">
 </head>
 <body>
   <div id="app"></div>
